Post-v2.15.0
---------------------
   - Removed support for 1024-bit Diffie-Hellman key exchange, which is now
     considered unsafe.
   - Ingress Policing:
     * Rate limiting configuration now supports setting packet-per-second
       limits in addition to the previously configurable byte rate settings.
       This is not supported in the userspace datapath yet.
   - OVSDB:
     * New command line options --record/--replay for ovsdb-server and
       ovsdb-client to record and replay all the incoming transactions,
       monitors, etc.  More datails in Documentation/topics/record-replay.rst.
   - In ovs-vsctl and vtep-ctl, the "find" command now accept new
     operators {in} and {not-in}.
   - Userspace datapath:
     * Auto load balancing of PMDs now partially supports cross-NUMA polling
       cases, e.g if all PMD threads are running on the same NUMA node.
     * Userspace datapath now supports up to 2^18 meters.
     * Added support for systems with non-contiguous NUMA nodes and core ids.
     * Added all-zero IP SNAT handling to conntrack. In case of collision,
       using ct(src=0.0.0.0), the source port will be replaced with another
       non-colliding port in the ephemeral range (1024, 65535).
     * Refactor lib/dpif-netdev.c to multiple header files.
     * Add avx512 implementation of dpif which can process non recirculated
       packets. It supports partial HWOL, EMC, SMC and DPCLS lookups.
     * Add commands to get and set the dpif implementations.
     * Add a partial HWOL PMD statistic counting hits similar to existing
       EMC/SMC/DPCLS stats.
     * Enable AVX512 optimized DPCLS to search subtables with larger miniflows.
     * Add more specialized DPCLS subtables to cover common rules, enhancing
       the lookup performance.
     * Enable the AVX512 DPCLS implementation to use VPOPCNT instruction if the
       CPU supports it. This enhances performance by using the native vpopcount